--- a/assets/css/sass/woocommerce/account-page.scss
+++ b/assets/css/sass/woocommerce/account-page.scss
@@ -1,4 +1,5 @@
 .woocommerce-account{
+
 	h2{
 		font-size: 20px;
 		font-weight: normal;
@@ -6,6 +7,12 @@
 
 	.entry-title{
 		margin-bottom: 50px;
+	}
+
+	.page-header {
+		.entry-title {
+			margin-bottom: 0;
+		}
 	}
 
 	.woocommerce-form.woocommerce-form-login{
