WOOSTIFY-148 #comment support header layout mega; add option disabled topbar

--- a/assets/css/sass/woocommerce/woocommerce-buttons.scss
+++ b/assets/css/sass/woocommerce/woocommerce-buttons.scss
@@ -1,4 +1,5 @@
 .button,
+.product-loop-image-wrapper > .added_to_cart,
 .woocommerce-widget-layered-nav-dropdown__submit,
 .clear-cart-btn,
 .checkout-button{
