--- a/assets/css/sass/base/layout/sidebar-menu.scss
+++ b/assets/css/sass/base/layout/sidebar-menu.scss
@@ -187,7 +187,7 @@
 		}
 		a {
 			display: block;
-			font-size: 1.2em;
+			font-size: 16px;
 			line-height: 3em;
 			position: relative;
 			&:hover {
@@ -220,7 +220,7 @@
 		a {
 			display: block;
 			line-height: 3em;
-			font-size: 1.2em;
+			font-size: 16px;
 		}
 	}
 	ul {
