--- a/assets/css/sass/woocommerce/account-page.scss
+++ b/assets/css/sass/woocommerce/account-page.scss
@@ -81,10 +81,11 @@
 }
 
 .woocommerce-MyAccount-navigation{
-    margin-bottom: 30px;
-    float: left;
+    margin-bottom: 50px;
+    width: 100%;
 
     @media ( min-width: $screen-md ) {
+    	float: left;
         margin-bottom: 0;
         max-width: 270px;
         margin-right: 30px;
@@ -157,7 +158,7 @@
     }
 }
 .woocommerce-MyAccount-content{
-	float: left;
+	width: 100%;
 
 	table{
 		&:first-child{
@@ -166,6 +167,7 @@
 	}
 
     @media ( min-width: $screen-md ) {
+    	float: left;
         @include calc( width, '100% - 400px' );
     }
 
