--- a/style.css
+++ b/style.css
@@ -4946,6 +4946,10 @@ dd {
   margin-bottom: 20px;
 }
 
+.sidebar-menu .site-search .search-field {
+  border-radius: 3px;
+}
+
 .sidebar-menu .search-form,
 .sidebar-menu .woocommerce-product-search {
   height: 40px;
@@ -6293,10 +6297,6 @@ footer#colophon {
   margin-top: 0;
 }
 
-.blog-layout-grid .site-main .post-cover-image {
-  margin-bottom: 0;
-}
-
 .blog-layout-grid .site-main .entry-title {
   font-size: 18px;
 }
@@ -7454,20 +7454,20 @@ footer#colophon {
   content: "\e60e";
 }
 
-.ps-layout-1 .no-transform .animated-meta {
+.no-transform .animated-meta {
   display: inline-flex;
   flex-direction: column;
 }
 
-.ps-layout-1 .product-loop-meta.no-transform .button,
-.ps-layout-1 .product-loop-meta.no-transform .added_to_cart {
+.product-loop-meta.no-transform .button,
+.product-loop-meta.no-transform .added_to_cart {
   display: inline-flex;
   padding: 10px 15px;
   margin-top: 10px;
   height: 36px;
 }
 
-.ps-layout-1 .product-loop-meta:not(.no-transform) .button {
+.product-loop-meta:not(.no-transform) .button {
   padding: 0;
   background-color: rgba(0, 0, 0, 0);
 }
@@ -7807,6 +7807,18 @@ footer#colophon {
   padding-right: 10px;
 }
 
+@media (max-width: 720px) {
+  .variations .label {
+    width: 100%;
+  }
+  .variations .value {
+    max-width: none;
+  }
+  .variations select {
+    min-width: 100%;
+  }
+}
+
 .single_variation {
   margin-bottom: 40px;
 }
@@ -7988,6 +8000,18 @@ footer#colophon {
   list-style: none;
   display: inline-block;
   margin: 0 30px;
+}
+
+@media (max-width: 720px) {
+  .woocommerce-tabs .tabs li {
+    margin: 5px 0;
+    width: 100%;
+  }
+  .woocommerce-tabs .tabs li a {
+    display: block;
+    padding: 5px 15px;
+    border: 1px solid #efefef;
+  }
 }
 
 .woocommerce-tabs .tabs a {
@@ -9319,12 +9343,13 @@ footer#colophon {
 }
 
 .woocommerce-MyAccount-navigation {
-  margin-bottom: 30px;
-  float: left;
+  margin-bottom: 50px;
+  width: 100%;
 }
 
 @media (min-width: 992px) {
   .woocommerce-MyAccount-navigation {
+    float: left;
     margin-bottom: 0;
     max-width: 270px;
     margin-right: 30px;
@@ -9390,7 +9415,7 @@ footer#colophon {
 }
 
 .woocommerce-MyAccount-content {
-  float: left;
+  width: 100%;
 }
 
 .woocommerce-MyAccount-content table:first-child {
@@ -9399,6 +9424,7 @@ footer#colophon {
 
 @media (min-width: 992px) {
   .woocommerce-MyAccount-content {
+    float: left;
     width: -webkit-calc( 100% - 400px);
     width: calc( 100% - 400px);
   }
