--- a/assets/css/sass/base/layout/sidebar-menu.scss
+++ b/assets/css/sass/base/layout/sidebar-menu.scss
@@ -110,6 +110,9 @@
 	/* search form */
 	.site-search{
 		margin-bottom: 20px;
+		.search-field {
+			border-radius: 3px;
+		}
 	}
 	.search-form,
 	.woocommerce-product-search {
@@ -209,7 +212,7 @@
 
 	/* sidebar bottom */
 	.sidebar-menu-bottom {
-		border-top: 1px solid #eee;
+		border-top: 1px solid 0.12156862745098039;
 		ul {
 			padding-left: 0;
 			margin: 0;
