--- a/assets/css/admin/metabox.scss
+++ b/assets/css/admin/metabox.scss
@@ -28,7 +28,7 @@
 	}
 }
 
-/* metabox option */
+/* Metabox option */
 .woostify-metabox-option{
 	border-bottom: 1px solid #eee;
 	padding: 15px;
@@ -54,4 +54,70 @@
 
 .woostify-metabox-option-title{
 	margin-bottom: 4px;
+}
+
+/* Multi select */
+.woostify-multi-selection {
+	position: relative;
+
+	&.active {
+		.woostify-multi-select-dropdown {
+			display: block;
+		}
+	}
+}
+
+.woostify-multi-select-selection {
+	border: 1px solid #ddd;
+	padding: 5px 5px 0 5px;
+	min-height: 30px;
+	display: flex;
+	flex-wrap: wrap;
+
+	.woostify-multi-select-id {
+		background-color: #f4f4f8;
+		border: 1px solid #ddd;
+		border-radius: 3px;
+		margin-bottom: 5px;
+		padding: 0 5px;
+		margin-right: 7px;
+	}
+}
+
+.woostify-multi-select-id {
+	cursor: pointer;
+	word-break: break-all;
+
+	&.disabled {
+		cursor: default;
+	}
+}
+
+.woostify-multi-select-dropdown {
+	position: absolute;
+	z-index: 10;
+	left: 0;
+	right: 0;
+	top: 100%;
+	border: 1px solid #ddd;
+	border-top: 0;
+	background-color: #fff;
+	max-height: 145px;
+	overflow-y: scroll;
+	border-radius: 0 0 3px 3px;
+	display: none;
+
+	.woostify-multi-select-id {
+		padding: 5px;
+		display: block;
+
+		+.woostify-multi-select-id {
+			border-top: 1px solid #fff;
+		}
+
+		&.disabled,
+		&:hover {
+			background-color: #efefef;
+		}
+	}
 }
