--- a/assets/css/sass/base/layout/header.scss
+++ b/assets/css/sass/base/layout/header.scss
@@ -40,6 +40,7 @@
     /* search form */
     .site-search{
         min-width: 270px;
+        position: relative;
 
         +.site-tools{
         	margin-left: 10px;
