--- a/style.css
+++ b/style.css
@@ -4879,30 +4879,29 @@ dd {
   transform: rotate(-45deg) translate(14px, 11px);
 }
 
-@media (max-width: 991px) {
-  .sidebar-menu-open #woostify-overlay {
-    opacity: 1;
-    visibility: visible;
-    pointer-events: auto;
-  }
+.sidebar-menu-open #woostify-overlay {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+.sidebar-menu-open #view {
+  -webkit-transform: translateX(300px);
+  transform: translateX(300px);
+}
+
+.sidebar-menu-open .sidebar-menu {
+  -webkit-transform: translateX(0);
+  transform: translateX(0);
+}
+
+@media (min-width: 992px) {
   .sidebar-menu-open #view {
     -webkit-transform: translateX(300px);
     transform: translateX(300px);
   }
   .sidebar-menu-open .sidebar-menu {
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
-  }
-}
-
-@media (max-width: 991px) and (min-width: 992px) {
-  .sidebar-menu-open #view {
-    -webkit-transform: translateX(50%);
-    transform: translateX(50%);
-  }
-  .sidebar-menu-open .sidebar-menu {
     padding: 40px 60px;
-    width: 50%;
   }
   .sidebar-menu-open .sidebar-menu .site-navigation {
     left: 60px;
