WOOSTIFY-149 #comment support new size-guide pro version; sidebar-menu issue

--- a/assets/css/admin/metabox.css
+++ b/assets/css/admin/metabox.css
@@ -72,6 +72,9 @@ body.old-version .woostify-metabox-option {
   margin-bottom: 5px;
   padding: 0 5px;
   margin-right: 7px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .woostify-multi-select-id {
