--- a/assets/css/sass/base/layout/sidebar-menu.scss
+++ b/assets/css/sass/base/layout/sidebar-menu.scss
@@ -70,15 +70,9 @@
 		}
 
 		.sidebar-menu {
-			padding: 40px 60px;
-
 			.site-navigation {
 				left: 60px;
 				right: 60px;
-			}
-
-			.sidebar-menu-bottom {
-				padding: 30px 60px 10px 60px;
 			}
 		}
 	}
@@ -209,7 +203,7 @@
 
 	/* sidebar bottom */
 	.sidebar-menu-bottom {
-		border-top: 1px solid 0.12156862745098039;
+		border-top: 1px solid rgba(0,0,0,0.12156862745098039);
 		ul {
 			padding-left: 0;
 			margin: 0;
