add trust badge image

--- a/assets/css/sass/woocommerce/woocommerce.scss
+++ b/assets/css/sass/woocommerce/woocommerce.scss
@@ -614,6 +614,12 @@ $size: 40px;
 	}
 }
 
+/* Trust badge image */
+.woostify-trust-badge-box {
+	text-align: center;
+	margin-top: 30px;
+}
+
 /* HOVER */
 .products{
 	.product{
