remove some admin static file

--- a/assets/css/admin/metabox.css
+++ b/assets/css/admin/metabox.css
@@ -71,6 +71,7 @@ body.old-version .woostify-metabox-option {
   min-height: 30px;
   display: flex;
   flex-wrap: wrap;
+  background-color: #fff;
 }
 
 .woostify-multi-select-selection .woostify-multi-select-id {
