--- a/assets/css/admin/metabox.scss
+++ b/assets/css/admin/metabox.scss
@@ -80,6 +80,7 @@
 	min-height: 30px;
 	display: flex;
 	flex-wrap: wrap;
+	background-color: #fff;
 
 	.woostify-multi-select-id {
 		background-color: #f4f4f8;
