WOOSTIFY-164 #comment Next/Preview error #done

--- a/assets/css/sass/base/layout/breadcrumb.scss
+++ b/assets/css/sass/base/layout/breadcrumb.scss
@@ -85,6 +85,13 @@
 	position: relative;
 	z-index: 9;
 
+	.woocommerce +& {
+		@media ( min-width: $screen-md ) {
+			justify-content: flex-end;
+		}
+		flex-grow: 1;
+	}
+
 	@media ( max-width: $screen-md - 1 ) {
 		width: 100%;
 		justify-content: space-between;
