--- a/assets/css/sass/woocommerce/shop-page.scss
+++ b/assets/css/sass/woocommerce/shop-page.scss
@@ -26,6 +26,7 @@
 		right: 0;
 		bottom: 0;
 		background-size: cover;
+		background-position: center;
 		opacity: 0;
 		@include transition( all .3s ease-in-out );
 	}
@@ -72,7 +73,7 @@
 .has-equal-image-height {
 	img {
 		position: absolute;
-		height: 100%;
+		height: 100% !important;
 		width: 100%;
 		object-fit: cover;
 	}
