--- a/style.css
+++ b/style.css
@@ -7487,6 +7487,7 @@ footer#colophon {
   right: 0;
   bottom: 0;
   background-size: cover;
+  background-position: center;
   opacity: 0;
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
@@ -7530,7 +7531,7 @@ footer#colophon {
 
 .has-equal-image-height img {
   position: absolute;
-  height: 100%;
+  height: 100% !important;
   width: 100%;
   object-fit: cover;
 }
